--- a/src/Screenshots/assets/index.html
+++ b/src/Screenshots/assets/index.html
@@ -13,5 +13,7 @@
         };
         document.getElementById("json").textContent = JSON.stringify(data, null, 2);
     </script>
+    <br />
+    <p>Regrettably, Puppeteer is encountering issues within the Docker container, and I haven't been able to find a solution to resolve this problem :(</p>
 </body>
 </html>
